[project]
name = "my-scalping-kabu-station-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "polars>=1.36.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "websockets>=15.0.1",
    "xgboost>=3.1.2",
]

[tool.pytest.ini_options]
norecursedirs = ["uv_cache", ".venv"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
